Added Arm and Gun Mode

--- a/arm_package_HL/CMakeLists.txt
+++ b/arm_package_HL/CMakeLists.txt
@@ -58,7 +58,7 @@ find_package(catkin REQUIRED COMPONENTS
 # Generate messages in the 'msg' folder
 add_message_files(
   FILES
-  Joints.msg
+  Arm_data.msg
   # Message2.msg
 )
 
