--- a/arm_package_HL/CMakeLists.txt
+++ b/arm_package_HL/CMakeLists.txt
@@ -58,7 +58,8 @@ find_package(catkin REQUIRED COMPONENTS
 # Generate messages in the 'msg' folder
 add_message_files(
   FILES
-  Arm_data.msg
+  Arm.msg
+  Gun.msg
   # Message2.msg
 )
 
